[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/stone/stone.png" type="Texture" id=1]
[ext_resource path="res://world/stone.gd" type="Script" id=2]
[ext_resource path="res://systems/healthsystem.tscn" type="PackedScene" id=3]

[node name="stone" type="Area2D" groups=["stone"]]
collision_layer = 11
collision_mask = 9
monitoring = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
script = ExtResource( 2 )

[node name="tex" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -15, 15, 14, 15, 14, 10, 11, 5, 1, -6, -3, -6, -7, -5, -15, 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.38419e-07, -2.38419e-07 )
scale = Vector2( 1.6, 1.6 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -15, 15, 14, 15, 14, 10, 11, 5, 1, -6, -3, -6, -7, -5, -15, 10 )

[node name="healthsystem" parent="." instance=ExtResource( 3 )]
health = 10
max_health = 10
BarPosition = Vector2( 0, -16 )

[connection signal="area_entered" from="." to="." method="_on_kust_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
